# Abyss

./: .gitignore  Abyss-0-2.sln  Cargo.toml  README.md  logo_width_120.txt
Abyss-0-2/: Abyss-0-2.fsproj  Biome.fs  Chunk.fs  Command.fs  Debug.fs  Dungeon.fs  Game.fs  Main.fs  Player.fs  Tile.fs
Abyss-0-2/src/biomes/: 1.csv
data/: biomes.toml  dungeons.toml  effect.json  floors.toml  game_data.toml  text_en.json  text_ja.json  text_la.json
docs/: game_reference_en.md  game_reference_ja.md
src/: defs.rs  game.rs  main.rs  noise.rs  save.rs  text.rs  world_cfg.rs
