[package]
name = "abyss"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
toml = "0.8"
rodio = { version = "0.20", features = ["noise"] }
